--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "firebase": "^5.9.1",
+    "install": "^0.12.2",
+    "npm": "^6.9.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue-wysiwyg": "^1.7.2",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
