--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "firebase": "^5.9.1",
+    "firebase": "^5.9.3",
     "install": "^0.12.2",
     "npm": "^6.9.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
+    "vuefire": "^1.4.5",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
