--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase": "^5.9.3",
     "install": "^0.12.2",
     "npm": "^6.9.0",
