--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-wysiwyg": "^1.7.2",
     "vue2-animate": "^2.1.0",
     "vuefire": "^1.4.5",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
