Updated navigation menu.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "npm": "^6.9.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue-share-social": "^0.3.2",
     "vue-wysiwyg": "^1.7.2",
+    "vue-zoomer": "^0.2.9",
     "vue2-animate": "^2.1.0",
     "vuefire": "^1.4.5",
     "vuelidate": "^0.7.4",
